--- a/common.sty
+++ b/common.sty
@@ -23,8 +23,9 @@
 %----------------- Colors ---------------------%
 
 \usepackage{colorspace}
+\usepackage[dvipsnames,usenames]{xcolor}
 \usepackage{graphicx,color}
-\usepackage{xcolor}
+
 %% -------- https://www.colorspire.com/rgb-color-wheel/ -------------%%
 \definecolor{Floresta}{rgb}{0.13,0.54,0.13}
 \definecolor{Rosadif}{rgb}{0.6196,0.1254,0.6980} %9E20B2
