--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -80,6 +80,8 @@ mathb7 <8-9> mathb8 <9-10> mathb9 <10-12> mathb10 <12-> mathb12 }{}
 mathb7 <8-9> mathb8 <9-10> mathb9 <10-12> mathb10 <12-> mathb12 }{}
 \DeclareSymbolFont{mathb}{U}{mathb}{m}{n}
 
+\newcommand{\prin}[1]{\left\langle #1 \right\rangle }
+
 
 \newcommand{\exercicio}[1]{\subsection{Exercício #1} \textcolor{blue}{\bf(#1)}}
 \newcommand{\dividiritens}[1]{\begin{tasks}[counter-format={(tsk[a])},label-width=3.6ex, label-format = {\bfseries}, column-sep = {0pt}](1) #1 \end{tasks}}
