--- a/main.tex
+++ b/main.tex
@@ -1608,7 +1608,7 @@ m_T(t)=t^m+a_{m-1}t^{m-1}+\dots+a_1t+a_0,
 então $m_T(T)=0$, e $m_T(t)$ é um polinômio mônico de grau mínimo tal que $m_T(T)=0$.
 
 \begin{definicao}
-Um polinômio mônico de grau mínimo tal que $m_T(t)\in K[t]$ tal que $m_T(t)=0$ chama-se um \textbf{polinômio minimal} do operador $T$. Chamemos um polinômio $f(t)\in K[t]$ de um \textbf{polinômio anulador} de $T$ se $f(T)=0$.
+Um polinômio mônico de grau mínimo tal que $m_T(t)\in K[t]$ tal que $m_T(t)=0$ chama-se um \textbf{polinômio minimal} do operador $T$.
 \end{definicao}
 
 \begin{lema}
@@ -1624,25 +1624,6 @@ Como $f(T)=0$ e $m_T(t)=0$, então $r(T)=0$, aí $r(t)=0$.
 
 \begin{corolario}
 O polinômio $m_T(t)$ é único.
-\end{corolario}
-
-\begin{definicao}
-Dado $v\in V$, um polinômio mônico de grau mínimo $m_{T,v}(t)\in K[t]$ tal que $m_{T,v}(T)(v)=0$ chama-se um \textbf{polinômio $T$-minimal} do vetor $v$. Chamemos um polinômio $f(t)\in K[t]$ de um \textbf{polinômio $T$-anulador} de $v$ se $f(T)(v)=0$.
-\end{definicao}
-
-\begin{lema}
-Seja $f(t)\in K[t]$ tal que $f(T)(v)=0$. Então $m_{T,v}(t)\mid f(t)$.
-\end{lema}
-\begin{proof}
-Dividimos $f(t)$ por $m_{T,v}(t)$ (com resto):
-\[
-f(t)=m_{T,v}(t)\cdot q(t)+r(t),\quad\quad\deg(r(t))<\deg(m_{T,v}(t))\text{ ou }r(t)=0.
-\]
-Como $f(T)(v)=0$ e $m_{T,v}(T)(v)=0$, então $r(T)(v)=0$, aí $r(t)=0$.
-\end{proof}
-
-\begin{corolario}
-O polinômio $m_{T,v}(t)$ é único.
 \end{corolario}
 
 \noindent
@@ -1815,6 +1796,69 @@ m_T(X) & * \\ 0 & m_T(Y)
 \]
 mas sabemos que $m_T(Z)=0$, aí $m_T(X)=0$ e $m_T(Y)=0$, aí a conclusão segue.
 \end{proof}
+
+\section{Subespaços Cíclicos}
+
+\begin{definicao}
+Seja $V$ um espaço vetorial e $T\in\mathcal{L}(V)$. Para $v\in V$, definimos o \textbf{subespaço $T$-cíclico gerado por $v$} como o conjunto $Z(v,T)$ de todos os vetores da forma $p(T)(v)$ em que $p\in K[x]$. Dizemos que $v$ é um \textbf{vetor cíclico} para $T$ se e só se $Z(v,T)=V$.
+\end{definicao}
+
+\begin{proposicao}
+Seja $V$ um espaço vetorial e seja $T\in\mathcal{L}(V)$. Para $v\in V$, então $Z(v,T)$ é o subespaço gerado pelo conjunto $\{T^n(v):n\in\mathbb{N}\}$.
+\end{proposicao}
+
+\begin{definicao}
+Dado $v\in V$, um polinômio mônico de grau mínimo $m_{T,v}(t)\in K[t]$ tal que $m_{T,v}(T)(v)=0$ chama-se um \textbf{polinômio $T$-anulador} do vetor $v$.
+\end{definicao}
+
+\begin{lema}
+Seja $f(t)\in K[t]$ tal que $f(T)(v)=0$. Então $m_{T,v}(t)\mid f(t)$.
+\end{lema}
+\begin{proof}
+Dividimos $f(t)$ por $m_{T,v}(t)$ (com resto):
+\[
+f(t)=m_{T,v}(t)\cdot q(t)+r(t),\quad\quad\deg(r(t))<\deg(m_{T,v}(t))\text{ ou }r(t)=0.
+\]
+Como $f(T)(v)=0$ e $m_{T,v}(T)(v)=0$, então $r(T)(v)=0$, aí $r(t)=0$.
+\end{proof}
+
+\begin{corolario}
+O polinômio $m_{T,v}(t)$ é único.
+\end{corolario}
+
+\begin{teorema}
+Seja $V$ um espaço vetorial e $T\in\mathcal{L}(V)$. Seja $v\in V$ que possua um polinômio $T$-anulador, e consideremos o polinômio $m_{T,v}$. Então:
+\begin{itemize}
+\item O grau de $m_{T,v}$ é igual à dimensão de $Z(v,T)$.
+\item Se o grau de $m_{T,v}$ é $k$, então $v,T(v),\dots,T^{k-1}(v)$ formam uma base de $Z(v,T)$.
+\item Se $W=Z(v,T)$, então $m_{T\upharpoonright_W}=m_{T,v}$.
+\end{itemize}
+\end{teorema}
+
+\noindent
+O teorema seguinte mostra como subespaços cíclicos podem ser compostos e decompostos.
+
+\begin{teorema}
+Seja $V$ um espaço vetorial e $T\in\mathcal{L}(V)$.
+\begin{itemize}
+\item (Compondo subespaços cíclicos) Se $u_1,\dots,u_n\in V$ tem $T$-anuladores mutuamente primos entre si, então o $T$-anulador de $u=u_1+\dots+u_n$ é:
+\[
+m_{T,u}=m_{T,u_1}\dots m_{T,u_n}
+\]
+e também:
+\[
+Z(u,T)=Z(u_1,T)\oplus\dots\oplus Z(u_n,T).
+\]
+\item (Decompondo subespaços cíclicos) Se $m_{T,u}=f_1\dots f_n$ com $f_1,\dots,f_n$ mutuamente primos entre si, então $u$ tem a forma:
+\[
+u=u_1+\dots+u_n,
+\]
+em que $m_{T,u_i}=f_i$, e também:
+\[
+Z(u,T)=Z(u_1,T)\oplus\dots\oplus Z(u_n,T).
+\]
+\end{itemize}
+\end{teorema}
 
 \section{Teorema de Cayley-Hamilton}
 
@@ -1996,7 +2040,7 @@ p_r^{k_r}.
 \]
 Para $j\neq i$ e para \(v\in V_j\), então \(p_j^{k_j}(v)=0\) e portanto
 \(g(T)(v)=0\). Se \(v\in V_i\) então \(p_i^{m_i}(T)(v)=0\) e
-\(g(T)(v)=0\). Assim, como $V=V_1+\oplus+V_r$, concluímos que \(g(T)=0\).
+\(g(T)(v)=0\). Assim, como $V=V_1\oplus\dots\oplus V_r$, concluímos que \(g(T)=0\).
 Isso implica que \(m_T\mid g\), aí \(p_i^{k_i}\mid p_i^{m_i}\), aí $k_i\leq m_i$, assim $m_i=k_i$, aí \(m_{T_i}=p_i^{k_i}.\)
 \end{proof}
 \begin{teorema}[Decomposição Primária para Característicos]\label{primaria caracteristico}
@@ -2019,6 +2063,36 @@ Pelo teorema de Cayley-Hamilton temos \(p_T(T)=0\). Portanto, pelo teorema da de
 para cada \(i=1,\dots,r\).
 Temos que \(p_i(T_i)^{k_i}=0\). Então segue que \(m_{T_i}\mid
 p_i^{k_i}\), aí, pelo teorema de Cayley-Hamilton \textcolor{red}{ao avesso} (Teorema \ref{cayley-hamilton-avesso}), todo fator irredutível de $p_{T_i}$ deve dividir $m_{T_i}$, logo ser igual a $p_i$. Assim $p_{T_i}=p_i^{l_i}$ para algum $l_i$. Entretanto, considerando bases $B_i$ de $V_i$, e juntando numa base $B$ de $V$, é fácil ver que $p_T=p_{T_1}\dots p_{T_k}$, assim $p_T=p_1^{l_1}\ldots p_r^{l_r}$, aí pela fatoração única devemos ter $l_i=k_i$ para todo $i$, concluindo a demonstração.
+\end{proof}
+
+\noindent
+A decomposição primária para minimais também goza de uma propriedade muito importante para o estudo da álgebra linear.
+
+\begin{teorema}[Unicidade da Decomposição Primária para Minimais]
+Seja $V$ um espaço vetorial e seja $T\in\mathcal{L}(V)$. Suponhamos que:
+\[
+V=U_1\oplus\dots\oplus U_m
+\]
+em que $U_i$ é um subespaço $T$-invariante tal que $m_{T\upharpoonright_{U_i}}=p_i^{e_i}$ e $p_1,\dots,p_m$ são polinômios mônicos irredutíveis distintos, e suponhamos que:
+\[
+V=W_1\oplus\dots\oplus W_n
+\]
+em que $W_j$ é um subespaço $T$-invariante tal que $m_{T\upharpoonright_{W_j}}=q_j^{f_j}$ e $q_1,\dots,q_n$ são polinômios mônicos irredutíveis distintos. Então $m=n$ e, depois de uma reindexação adequada, $U_k=W_k$ para todo $k$. Portanto $p_k=q_k$ e $e_k=f_k$ para todo $k$.
+\end{teorema}
+\begin{proof}
+Para todo $i$, então $U_i$ contém um elemento $u_i$ tal que $m_{T,u_i}=p_i^{e_i}$; assim, definindo a soma $u=u_1+\dots+u_m$, então $m_{T,u}=p_1^{e_1}\dots p_m^{e_m}$. Logo $m_T=p_1^{e_1}\dots p_m^{e_m}$. Analogamente temos $m_T=q_1^{f_1}\dots q_n^{f_n}$.
+
+\medskip
+\noindent
+Portanto, pela fatoração única em $K[t]$, então $m=n$ e, depois de uma reindexação apropriada, temos $p_k=q_k$ e $e_k=f_k$ para todo $k$. Para todo $k$, temos:
+\[
+U_k\subseteq\Ker \ p_k(T)^{e_k},
+\]
+mas pela decomposição primária geral temos:
+\[
+U_1\oplus\dots\oplus U_m=\left(\Ker \ p_1(T)^{e_1}\right)\oplus\dots\oplus\left(\Ker \ p_m(T)^{e_m}\right),
+\]
+aí para todo $k$ temos $U_k=\Ker \ p_k(T)^{e_k}$. Analogamente temos $W_k=\Ker \ q_k(T)^{f_k}$ para todo $k$.
 \end{proof}
 
 \section{Critérios de Diagonalização}
@@ -2044,6 +2118,574 @@ simultaneamente se, e somente se cada \(T_i\) é diagonalizável e \(T_iT_j=T_jT
 \begin{proof}
 Mostraremos por indução na dimensão. Suponhamos que o teorema é válido para espaços de dimensão menor que $n$. Seja $V$ um espaço tal que $\dim(V)=n$ e seja $\mathcal{F}$ um conjunto de operadores que comutam um com outro. Se todo elemento de $\mathcal{F}$ é múltiplo da identidade, então acaba. Caso contrário, existe um $T\in\mathcal{F}$ que não é múltiplo da identidade. Sejam $c_1,\dots,c_k$ os autovalores de $T$. Para $i$ seja $W_i=\Ker(T-c_iI)$. Então, como os elementos de $\mathcal{F}$ comutam um com outro, então $W_i$ é invariante para todo elemento de $\mathcal{F}$. Para cada $U\in\mathcal{F}$, então $m_U$ é produto de fatores lineares distintos, aí, como $m_{U\upharpoonright_{W_i}}\mid m_U$, então $m_{U\upharpoonright_{W_i}}$ é produto de fatores lineares distintos, aí $U\upharpoonright_{W_i}$ é diagonalizável. Como $\dim(W_i)<n$, então existe uma base $B_i$ tal que para todo $U\in\mathcal{F}$ a matriz $[U\upharpoonright_{W_i}]_{B_i}$ seja diagonal. Portanto $B=B_1\cup\dots\cup B_k$ é a base que buscamos.
 \end{proof}
+
+\section{Triangularização de Matrizes}
+
+\section{Decomposições Cíclicas}
+
+O seguinte teorema mostra como podemos decompor um espaço vetorial anulável por uma potência de polinômio irredutível em subespaços cíclicos.
+
+\begin{teorema}[Decomposição Cíclica de Espaços Primários]
+Seja $V$ um espaço vetorial com \emph{dimensão finita} e seja $T\in\mathcal{L}(V)$ tal que $m_T=p^e$, em que $p$ é um polinômio irredutível. Então $V$ é uma soma direta:
+\[
+V=Z(v_1,T)\oplus\dots\oplus Z(v_n,T)
+\]
+de subespaços cíclicos com anuladores $m_{T,v_i}=p^{e_i}$, que podem ser arranjados em ordem decrescente:
+\[
+e=e_1\geq e_2\geq\dots\geq e_n.
+\]
+\end{teorema}
+\begin{proof}
+Seja $v_1\in V$ um vetor com anulador igual a polinômio minimal de $T$, ou seja:
+\[
+m_{T,v_1}=m_T=p^e.
+\]
+Tal elemento deve existir pois $m_{T,v}\mid m_T$ para todo $v\in V$ e se ninguém tiver anulador igual a $p(t)^e$, então $p(t)^{e-1}$ anulará $V$.
+
+\medskip
+\noindent
+Se mostrarmos que $Z(v_1,T)$ possui complemento $T$-invariante, ou seja, $V=Z(v_1,T)\oplus S_1$ para algum subespaço $T$-invariante $S_1$, então, como $S_1$ tem dimensão finita sobre $K$, ao considerarmos $T\upharpoonright_{S_1}$, podemos repetir o processo para obter:
+\[
+V=Z(v_1,T)\oplus Z(v_2,T)\oplus S_2
+\]
+em que $m_{T,v_i}=p^{e_i}$. Podemos continuar esta decomposição:
+\[
+V=Z(v_1,T)\oplus Z(v_2,T)\oplus\dots\oplus Z(v_n,T)\oplus S_n
+\]
+enquanto $S_n\neq 0$. Mas a sequência ascendente de subespaços $T$-invariantes:
+\[
+Z(v_1,T)\subseteq Z(v_1,T)\oplus Z(v_2,T)\subseteq\dots
+\]
+deve terminar pois a sequência das dimensões é estritamente crescente e $V$ tem dimensão finita, assim existe um inteiro $n$ tal que $S_n=0$, fornecendo-nos a decomposição buscada.
+
+\medskip
+\noindent
+Seja $v=v_1$. A soma direta de subespaços $T$-invariantes $V_1=Z(v,T)\oplus 0$ claramente existe. Suponhamos que a soma direta de subespaços $T$-invariantes:
+\[
+V_k=Z(v,T)\oplus W_k
+\]
+exista. Afirmamos que, se $V_k\neq V$, então é possível encontrar um subespaço $T$-invariante $W_{k+1}$ que contenha propriamente $W_k$ e para o qual a soma direta $V_{k+1}=Z(v,T)\oplus W_{k+1}$ exista. Esta processo deve também terminar após um número finito de passos, fornecendo-nos uma decomposição em soma direta de subespaços $T$-invariantes:
+\[
+V=Z(v,T)\oplus W
+\]
+como desejado.
+
+\medskip
+\noindent
+Se $V_k\neq V$, então seja $u\in V\setminus V_k$, aí o polinômio de menor grau $r$ tal que $r(T)(u)\in V_k$ deve ser $p^f$ para algum $f\leq e$. Além disso, como $u\notin V_k$, então $f>0$. Assim existem $a(t)\in K[t]$ e $w\in W_k$ tais que:
+\[
+p(T)^f(u)=a(T)(v)+w.
+\]
+Logo:
+\[
+0=p(T)^e(u)=p(T)^{e-f}p(T)^f(u)=p(T)^{e-f}(a(T)(v)+w)=p(T)^{e-f}a(T)(v)+p(T)^{e-f}(w).
+\]
+Como $Z(v,T)\cap W_k=0$ então $p(T)^{e-f}a(T)(v)=0$, aí $p^e\mid p^{e-f}a$, aí $p^f\mid a$, aí existe $\alpha(t)\in K[t]$ tal que $a=p^f\alpha$, assim:
+\[
+p(T)^f(u)=a(T)(v)+w=p(T)^f\alpha(T)(v)+w,
+\]
+aí:
+\[
+p(T)^f(u-\alpha(T)(v))\in W_k.
+\]
+Assim seja:
+\[
+W_{k+1}=W_k+Z\left(u-\alpha(T)(v),T\right).
+\]
+Para $x\in Z(v,T)\cap W_{k+1}$, então existem $f(t)\in K[t]$ e $g(t)\in K[t]$ e $w\in W_k$ tais que:
+\[
+x=f(T)(v)=w+g(T)(u-\alpha(T)(v)),
+\]
+aí:
+\[
+g(T)(u)=(f-g\alpha)(T)(v)-w\in V_k,
+\]
+aí $p^f\mid g$, aí:
+\[
+g(T)(u-\alpha(T)(v))\in W_k,
+\]
+aí:
+\[
+x\in Z(v,T)\cap W_k,
+\]
+aí $x=0$. Logo a soma direta de subespaços $T$-invariantes:
+\[
+V_{k+1}=Z(v,T)\oplus W_{k+1}
+\]
+existe.
+\end{proof}
+
+\noindent
+A decomposição cíclica de espaços primários, assim como a decomposição primária para minimais, goza da propriedade da unicidade.
+
+\begin{teorema}[Unicidade da Decomposição Cíclica de Espaços Primários]
+Seja $V$ um espaço vetorial e seja $T\in\mathcal{L}(V)$. Suponhamos que $V$ é uma soma direta:
+\[
+V=Z(u_1,T)\oplus\dots\oplus Z(u_m,T),
+\]
+em que $m_{T,u_i}=p_i^{e_i}$ e também:
+\[
+e_1\geq e_2\geq\dots\geq e_m,
+\]
+e também suponhamos que $V$ é uma soma direta:
+\[
+V=Z(v_1,T)\oplus\dots\oplus Z(v_n,T),
+\]
+em que $m_{T,v_j}=q_j^{f_j}$ e também:
+\[
+f_1\geq f_2\geq\dots\geq f_n.
+\]
+Então $m=n$ e $p=q$ e $e_k=f_k$ para todo $k$.
+\end{teorema}
+
+\begin{lema}
+Seja $V$ um espaço vetorial e $T\in\mathcal{L}(V)$ e seja $p(t)$ um polinômio irredutível.
+\begin{itemize}
+\item Se $p(T)=0$, então $V$ é um espaço vetorial sobre o corpo $K[t]/p(t)K[t]$ com a
+multiplicação definida por:
+\[
+\overline{r}(v)=r(T)v
+\]
+para quaisquer $r(t)\in K[t]$ e $v\in V$.
+\item Para qualquer subespaço $T$-invariante $W$ de $V$ o conjunto:
+\[
+W\cap \Ker \ p(T)=\{v\in W:p(T)(v)=0\}
+\]
+é um subespaço $T$-invariante de $V$ e se $V=U\oplus W$, então:
+\[
+\Ker \ p(T)=\left(U\cap \Ker \ p(T)\right)\oplus\left(W\cap \Ker \ p(T)\right).
+\]
+\end{itemize}
+\end{lema}
+
+\begin{proof}[Demonstração do Teorema]
+Primeiro notemos que $m_T=p_1^{e_1}$ e $m_T=q_1^{f_1}$. Assim $p=q$ e $e_1=f_1$. Agora mostraremos que $m=n$. De acordo com o lema anterior, sendo $W=Ker p(T)$, então:
+\[
+W=\left(W\cap Z(u_1,T)\right)\oplus\dots\oplus\left(W\cap Z(u_m,T)\right)
+\]
+e também:
+\[
+W=\left(W\cap Z(v_1,T)\right)\oplus\dots\oplus\left(W\cap Z(v_n,T)\right).
+\]
+Como $p(T)[W]=0$, então $W$ é um espaço vetorial sobre o corpo $L=K[t]/p(t)K[t]$ e aí cada uma das duas decomposições expressa $W$ como uma soma direta de subespaços de dimensão $1$. Logo $m=\dim_L(W)=n$.
+
+\medskip
+\noindent
+Finalmente mostraremos que os expoentes $e_i$ e $f_i$ são iguais usando indução em $e_1$. Se $e_1=1$, então $e_i=1$ para todo $i$ e como $f_1=e_1$, temos também $f_i=1$ para todo $i$. Suponhamos que o resultado seja válido para $e_1\leq k-1$ e seja $e_1=k$. Escreva:
+\[
+(e_1,\dots,e_n)=(e_1,\dots,e_s,1,\dots,1),\quad e_s>1
+\]
+e
+\[
+(f_1,\dots,f_n)=(f_1,\dots,f_t,1,\dots,1),\quad f_t>1.
+\]
+Então:
+\[
+p(T)[V]=p(T)[Z(u_1,T)]\oplus\dots\oplus p(T)[Z(u_m,T)]
+\]
+e
+\[
+p(T)[V]=p(T)[Z(v_1,T)]\oplus\dots\oplus p(T)[Z(v_n,T)],
+\]
+mas $p(T)[Z(v_1,T)]$ é um subespaço cíclico anulável por $p(T)^{e_1-1}$, aí pela hipótese de indução temos:
+\[
+s=t\quad\text{e}\quad e_1=f_1,\dots,e_s=f_s,
+\]
+concluindo assim a demonstração da unicidade.
+\end{proof}
+
+\noindent
+Agora podemos juntar a decomposição primária para minimais e a decomposição cíclica para espaços primários e obter a decomposição cíclica em divisores elementares.
+
+\begin{teorema}[Decomposição Cíclica em Divisores Elementares]
+Seja $V$ um espaço vetorial de \emph{dimensão finita} e seja $T\in\mathcal{L}(V)$. Se o polinômio minimal é dado por:
+\[
+m_T=p_1^{e_1}\dots p_n^{e_n},
+\]
+em que os $p_i$ são polinômios irredutíveis mônicos distintos sobre $K$, então $V$ pode ser decomposto em uma soma direta:
+\[
+V=V_1\oplus V_n,
+\]
+em que:
+\[
+V_i=\Ker \ p_i(T)^{e_i}
+\]
+é um subespaço $T$-invariante tal que $m_{T\upharpoonright_{V_i}}=p_i^{e_i}$. Finalmente, cada subespaço $T$-invariante $V_i$ pode ser escrito como uma soma direta de submódulos cíclicos, de modo que:
+\[
+V=\left(Z(v_{1,1},T)\oplus\dots\oplus Z(v_{1,k_1},T)\right)\oplus\left(Z(v_{n,1},T)\oplus\dots\oplus Z(v_{n,k_n},T)\right),
+\]
+em que $m_{T,v_{i,j}}=p_i^{e_{i,j}}$ e os termos de cada decomposição cíclica podem ser arranjados de modo que para cada $i$ tenhamos:
+\[
+e_i=e_{i,1}\geq e_{i,2}\geq\dots\geq e_{i,k_i}.
+\]
+\end{teorema}
+
+\noindent
+Além disso, juntando os teoremas das unicidades da decomposição primária para minimais e da decomposição cíclica para espaços primários, então temos a unicidade da decomposição cíclica em divisores elementares.
+
+\begin{teorema}[Unicidade da Decomposição Cíclica em Divisores Elementares]
+Seja $V$ um espaço vetorial e seja $T\in\mathcal{L}(V)$. Suponhamos que $V$ possa ser escrito como uma soma direta:
+\[
+V=\left(Z(u_{1,1},T)\oplus\dots\oplus Z(u_{1,k_1},T)\right)\oplus\dots\oplus\left(Z(u_{m,1},T)\oplus\dots\oplus Z(u_{m,k_m},T)\right)
+\]
+em que $m_{T,u_{i,j}}=p_i^{e_{i,j}}$ e:
+\[
+e_{i,1}\geq e_{i,2}\geq\dots\geq e_{i,k_i},
+\]
+e suponhamos que $V$ possa ser escrito como uma soma direta:
+\[
+V=\left(Z(v_{1,1},T)\oplus\dots\oplus Z(v_{1,l_1},T)\right)\oplus\dots\oplus\left(Z(v_{n,1},T)\oplus\dots\oplus Z(v_{n,l_n},T)\right)
+\]
+em que $m_{T,v_{i,j}}=q_i^{f_{i,j}}$ e:
+\[
+f_{i,1}\geq f_{i,2}\geq\dots\geq f_{i,l_i}.
+\]
+Então:
+\begin{itemize}
+\item O número de somandos é o mesmo em ambas as decomposições; de fato,
+$m=n$ e, depois de uma reindexação apropriada, $k_u=l_u$ para todo $u$.
+\item Os subespaços primários são os mesmos; isto é, depois de uma reindexação apropriada, para todo $i$ temos $p_i=q_i$ e:
+\[
+Z(u_{i,1},T)\oplus\dots\oplus Z(u_{i,k_i},T)=Z(v_{i,1},T)\oplus\dots\oplus Z(v_{i,l_i},T).
+\]
+\end{itemize}
+\end{teorema}
+
+\begin{definicao}
+O multiconjunto dos polinômios $p_i^{e_{i,j}}$ é unicamente determinado pela decomposição cíclica em divisores elementares, assim ele é chamado o multiconjunto dos \textbf{divisores elementares}.
+\end{definicao}
+
+\noindent
+A forma mais usual de se apresentar uma decomposição em subespaços cíclicos é a decomposição cíclica em fatores invariantes.
+
+\begin{teorema}[Decomposição Cíclica em Fatores Invariantes]
+Seja $V$ um espaço vetorial de \emph{dimensão finita} e seja $T\in\mathcal{L}(V)$. Então $V$ pode ser escrito como uma soma direta:
+\[
+V=Z(v_1,T)\oplus\dots\oplus Z(v_r,T)
+\]
+em que $m_{T,v_i}=p_i$ e também:
+\[
+p_r\mid p_{r-1}\mid\dots\mid p_2\mid p_1.
+\]
+\end{teorema}
+
+\noindent
+Por causa da unicidade da decomposição cíclica em divisores elementares, então temos a unicidade da decomposição cíclica em fatores invariantes
+
+\begin{teorema}[Unicidade da Decomposição Cíclica em Fatores Invariantes]
+Seja $V$ um espaço vetorial e seja $T\in\mathcal{L}(V)$. Suponhamos que $V$ possa ser escrito como uma soma direta:
+\[
+V=Z(u_1,T)\oplus\dots\oplus Z(u_r,T)
+\]
+em que $m_{T,u_i}=p_i$ e também:
+\[
+p_r\mid p_{r-1}\mid\dots\mid p_2\mid p_1,
+\]
+e que $V$ possa ser escrito como uma soma direta:
+\[
+V=Z(v_1,T)\oplus\dots\oplus Z(v_s,T)
+\]
+em que $m_{T,v_j}=q_j$ e também:
+\[
+q_s\mid q_{s-1}\mid\dots\mid q_2\mid q_1.
+\]
+Então $m=n$ e também $p_k=q_k$ para todo $k$.
+\end{teorema}
+
+\begin{definicao}
+A sequência dos polinômios $p_i$ é unicamente determinado pela decomposição cíclica em fatores invariantes, assim ela é chamada a sequência dos \textbf{fatores invariantes}.
+\end{definicao}
+
+\chapter{Espaços com Produto Interno}
+
+Neste capítulo, convencionaremos que $K$ é $\mathbb{R}$ ou $\mathbb{C}$.
+
+\section{Definições e Exemplos}
+
+\begin{definicao}
+Um espaço vetorial $V$ é dito um \textbf{espaço com produto interno} se estiver munida com uma função:
+\[
+\begin{array}{rcl}
+V\times V&\rightarrow&K\\
+(u,v)&\mapsto&\langle u,v\rangle
+\end{array}
+\]
+tal que:
+\begin{itemize}
+\item $\langle\alpha u+\beta v,w\rangle=\alpha\langle u,w\rangle+\beta\langle v,w\rangle$ para quaisquer $\alpha,\beta\in K$ e $u,v,w\in V$.
+\item $\overline{\langle u,v\rangle}=\langle v,u\rangle$ para quaisquer $u,v\in V$.
+\item $\langle v,v\rangle\geq 0$ para $v\in V$.
+\item $\langle v,v\rangle=0\Rightarrow v=0$ para $v\in V$.
+\end{itemize}
+\end{definicao}
+
+\begin{exemplo}
+O exemplo principal é $V=K^n$, em que, tomando $u=(\alpha_1,\dots,\alpha_n)$ e $v=(\beta_1,\dots,\beta_n)$, definimos:
+\[
+\langle u,v\rangle=\alpha_1\overline{\beta_1}+\dots+\alpha_n\overline{\beta_n}.
+\]
+\end{exemplo}
+
+\begin{exemplo}
+Podemos considerar $V=\m{n}{K}\cong K^{n^2}$. Com base no exemplo anterior, definimos:
+\[
+\langle A,B\rangle=\sum_{i,j}a_{i,j}\overline{b_{i,j}}.
+\]
+Para toda $A=(a_{i,j})\in\m{n}{K}$, definimos:
+\[
+A^*=(\overline{a_{i,j}}),
+\]
+e
+\[
+\mathrm{tr}(A)=a_{1,1}+\dots+a_{n,n},
+\]
+então podemos ver que:
+\[
+\langle A,B\rangle=\mathrm{tr}(AB^*).
+\]
+\end{exemplo}
+
+\begin{exemplo}
+Podemos tomar $V=\mathcal{C}[a,b]$, o conjunto das funções contínuas de $[a,b]$ em $\mathbb{C}$, e para $f,g\in V$ definirmos:
+\[
+\langle f,g\rangle=\int_a^bf(t)\overline{g(t)}\dif t.
+\]
+\end{exemplo}
+
+\begin{exemplo}
+Seja $T\in\mathcal{L}(U,V)$ bijetora. Suponhamos que $V$ tenha um produto interno. Se $u_1,u_2\in U$, definimos:
+\[
+\langle u_1,u_2\rangle_U=\langle T(u_1),T(u_2)\rangle_V.
+\]
+Suponhamos que $U$ tenha uma base $B=(e_1,\dots,e_n)$. Então existe uma $T:U\rightarrow K^n$ tal que:
+\[
+T(e_i)=(0,\dots,1,\dots,0),
+\]
+em que a entrada $i$ vale $1$ e as outras valem $0$. Sendo:
+\[
+u=\alpha_1e_1+\dots+\alpha_ne_n,\quad v=\beta_1e_1+\dots+\beta_ne_n,
+\]
+então:
+\[
+\langle u,v\rangle_U=\langle T(u),T(v)\rangle_V=\sum_{i=1}^n\alpha_i\overline{\beta_i}.
+\]
+\end{exemplo}
+
+\begin{definicao}
+Se $\dim(V)=n<\infty$ e $K=\mathbb{R}$, então chamamos $V$ de \textbf{euclidiano}.
+
+\smallskip
+\noindent
+Se $\dim(V)=n<\infty$ e $K=\mathbb{C}$, então chamamos $V$ de \textbf{unitário}.
+\end{definicao}
+
+\begin{definicao}
+Se $V$ é um espaço com produto interno e $V$ é um espaço completo em relação à norma $\norm{v}=\sqrt{\langle v,v\rangle}$, então $V$ se chama um \textbf{espaço de Hilbert}.
+\end{definicao}
+
+\section{Matriz de Gramm}
+
+\begin{definicao}
+Seja $V$ um espaço com produto interno. Sejam $v_1,\dots,v_k\in V$. Definimos:
+\[
+G(v_1,\dots,v_n)=\begin{pmatrix}
+\langle v_1,v_1\rangle&\dots&\langle v_1,v_n\rangle\\\dots&\dots&\dots\\\langle v_n,v_1\rangle&\dots&\langle v_n,v_n\rangle
+\end{pmatrix}.
+\]
+Nesse caso temos:
+\[
+G(v_1,\dots,v_n)^*=G(v_1,\dots,v_n).
+\]
+Toda matriz $A$ que satisfaz $A^*=A$ é chamada \textbf{Hermitiana}.
+\end{definicao}
+
+\begin{proposicao}
+Seja $B=(e_1,\dots,e_n)$ uma base de $V$. Então $G(e_1,\dots,e_n)$ é inversível.
+\end{proposicao}
+\begin{proof}
+Primeiro observemos que para quaisquer $u,v\in V$, com:
+\[
+[u]_B=(\alpha_1,\dots,\alpha_n),\quad [v]_B^*=(\beta_1,\dots,\beta_n)
+\]
+então:
+\[
+\langle u,v\rangle=[u]_BA[v]_B^*.
+\]
+De fato:
+\[
+\langle u,v\rangle=\sum_{i,j}\alpha_i\overline{\beta_j}\langle e_i,e_j\rangle,
+\]
+aí:
+\[
+\begin{array}{rcl}
+[u]_BA[v]_B^*&=&(\alpha_1,\dots,\alpha_n)\begin{pmatrix}
+\langle e_1,e_1\rangle&\dots&\langle e_1,e_n\rangle\\\dots&\dots&\dots\\\langle e_n,e_1\rangle&\dots&\langle e_n,e_n\rangle
+\end{pmatrix}\begin{pmatrix}
+\overline{\beta_1}\\\vdots\\\overline{\beta_n}
+\end{pmatrix}\\
+&=&\begin{pmatrix}
+\alpha_1\langle e_1,e_1\rangle+\dots+\alpha_n\langle e_n,e_1\rangle\\\vdots\\\alpha_1\langle e_1,e_n\rangle+\dots+\alpha_n\langle e_n,e_n\rangle
+\end{pmatrix}\begin{pmatrix}
+\overline{\beta_1}\\\vdots\\\overline{\beta_n}
+\end{pmatrix}
+\end{array}.
+\]
+Se $A$ não for inversível, então existe $u\neq 0$ tal que $[u]_BA=0$. Neste caso, $\langle u,u\rangle=[u]_BA[u]_B^*=0$, aí $u=0$, contradição.
+\end{proof}
+
+\noindent
+Se $B=(e_1,\dots,e_n)$ é uma base de $V$ e $A=G(e_1,\dots,e_n)$ então para todo $v\in V$ temos:
+\[
+[v]_BA[v]_B^*\geq 0
+\]
+e a igualdade ocorre se e somente se $v=0$.
+
+\begin{definicao}
+Uma matriz Hermitiana $A$ é dita:
+\begin{itemize}
+\item \textbf{Positiva semidefinitiva} se e só se para todo $x\in K^n$ temos $xAx^*\geq 0$.
+\item \textbf{Positiva definitiva} se e só se para todo $x\in K^n$ tal que $x\neq 0$ temos $xAx^*>0$.
+\end{itemize}
+\end{definicao}
+
+\begin{proposicao}
+Seja $A\in\m{n}{K}$ uma matriz Hermitiana positiva definitiva. Seja $V$ um espaço vetorial com base $B=(e_1,\dots,e_n)$. Definamos, para $u,v\in V$, o seguinte:
+\[
+\langle u,v\rangle=[u]_BA[v]_B^*.
+\]
+Então $\langle u,v\rangle$ é um produto interno.
+\end{proposicao}
+
+\section{Espaços Normados}
+
+\begin{definicao}
+Um espaço vetorial $V$ é dito um \textbf{espaço normado} se estiver munido com uma função:
+\[
+\begin{array}{rcl}
+V&\rightarrow&\mathbb{R}\\
+v&\mapsto&\norm{v}
+\end{array}
+\]
+que satisfaça as seguintes propriedades:
+\begin{itemize}
+\item $\norm{v}\geq 0$ para $v\in V$. 
+\item $\norm{v}=0\Rightarrow v=0$ para $v\in V$.
+\item $\norm{\alpha v}=\abs{\alpha}\norm{v}$ para $\alpha\in K$ e $v\in V$.
+\item $\norm{u+v}\leq\norm{u}+\norm{v}$ para $u,v\in V$.
+\end{itemize}
+\end{definicao}
+
+\begin{proposicao}[Desigualdade de Cauchy-Bunyakovski-Schwarz]
+Seja $V$ um espaço com produto interno. Então para quaisquer $u,v\in V$ temos:
+\[
+\abs{\langle u,v\rangle}\leq\norm{u}\cdot\norm{v}.
+\]
+\end{proposicao}
+\begin{proof}
+Se $v=0$, então é fácil. Se $v\neq 0$, então $\norm{v}>0$, aí para quaisquer $\alpha,\beta\in K$ temos:
+\[
+\begin{array}{rcl}
+0&\leq&\langle\alpha u-\beta v,\alpha u-\beta v\rangle\\
+&=&\alpha\overline{\alpha}\langle u,u\rangle+\beta\overline{\beta}\langle v,v\rangle-\alpha\overline{\beta}\langle u,v\rangle-\beta\overline{\alpha}\langle v,u\rangle\\
+&=&\abs{\alpha}^2\norm{u}^2+\abs{\beta}^2\norm{v}^2-\left(\alpha\overline{\beta}\langle u,v\rangle+\overline{\alpha\overline{\beta}\langle u,v\rangle}\right).
+\end{array}
+\]
+Em particular, fazendo $\alpha=\norm{v}$ e $\beta=\langle u,v\rangle$, então:
+\[
+\begin{array}{rl}
+&\norm{v}^4\norm{u}^2+\abs{\langle u,v\rangle}^2\norm{v}^2-2\norm{v}^2\langle u,v\rangle^2\geq0\\
+\Rightarrow&\norm{v}^2\norm{u}^2-\abs{\langle u,v\rangle}^2\geq 0\\
+\Rightarrow&\left(\norm{v}\norm{u}\right)^2\geq\abs{\langle u,v\rangle}^2.
+\end{array}
+\]
+\end{proof}
+
+\begin{proposicao}
+Seja $V$ um espaço com produto interno e definamos $\norm{v}=\sqrt{\langle v,v\rangle}$. Então $\norm{v}$ é uma norma.
+\end{proposicao}
+\begin{proof}
+Provaremos apenas a última propriedade requerida para espaço normado, deixando as outras para o leitor. Sabemos que para $z\in\mathbb{C}$ então $z+\overline{z}\leq 2\abs{z}$. De fato, sendo $z=a+bi$, então $\abs{z}=\sqrt{a^2+b^2}\geq a$, aí $z+\overline{z}=2a\leq 2\abs{z}$. Agora temos:
+\[
+\begin{array}{rcl}
+\abs{u+v}^2&=&\langle u+v,u+v\rangle\\
+&=&\norm{u}^2+\norm{v}^2+\left(\langle u,v\rangle+\overline{\langle u,v\rangle}\right)\\
+&\leq&\norm{u}^2+\norm{v}^2+2\abs{\langle u,v\rangle}\\
+&\leq&\norm{u}^2+\norm{v}^2+2\norm{u}\cdot\norm{v}\\
+&=&\left(\norm{u}+\norm{v}\right)^2.
+\end{array}
+\]
+\end{proof}
+
+\section{Ortogonalidade}
+
+\begin{definicao}
+Dois vetores $u,v\in V$ são ditos \textbf{ortogonais} se e só se $\langle u,v\rangle=0$.
+
+\smallskip
+\noindent
+Uma família $(v_i)_{i\in I}$ de vetores é chamado \textbf{ortogonal} se e só se para quaisquer $i,j\in I$ tais que $i\neq j$ os vetores $v_i$ e $v_j$ forem ortogonais.
+
+\smallskip
+\noindent
+Uma família $(v_i)_{i\in I}$ de vetores é chamado \textbf{ortonormal} se e só se é ortogonal e para todo $i\in I$ temos $\norm{v_i}=1$.
+\end{definicao}
+
+\begin{proposicao}
+Se $(v_i)_{i\in I}$ é uma família ortogonal de vetores \emph{não nulos}, então a família é L.I.
+\end{proposicao}
+\begin{proof}
+Para conjunto finito $J\subseteq I$ e para $\alpha:J\rightarrow I$, se:
+\[
+\sum_{i\in J}\alpha_iv_i=0,
+\]
+então para $j\in J$ temos:
+\[
+0=\left\langle\sum_{i\in J}\alpha_iv_i,v_j\right\rangle=\sum_{i\in J}\alpha_i\langle v_i,v_j\rangle=\alpha_j\norm{v_j}^2,
+\]
+mas $v_j\neq 0$, aí $\norm{v_j}^2\neq 0$, aí $\alpha_j=0$.
+\end{proof}
+
+\begin{proposicao}[Ortogonalização de Gramm-Schmidt]
+Para toda sequência linearmente independente $(v_1,\dots,v_k)$ de vetores, existe uma sequência ortogonal $(u_1,\dots,u_k)$ tal que $\langle v_1,\dots,v_k\rangle=\langle u_1,\dots,u_k\rangle$.
+\end{proposicao}
+\begin{proof}
+Indução sobre $k$.
+\end{proof}
+
+\begin{corolario}
+Todo espaço com produto interno de dimensão finita tem uma base ortonormal.
+\end{corolario}
+
+\section{Funcionais Lineares}
+
+\begin{proposicao}
+Seja $V$ um espaço com produto interno. Para $u\in V$, definimos $\varphi_u:V\rightarrow K$ assim:
+\[
+\varphi_u(v)=\langle v,u\rangle.
+\]
+Então $\varphi_u$ é um funcional linear.
+\end{proposicao}
+
+\begin{teorema}[Teorema de Riesz]
+Se $\dim(V)<\infty$, então para todo $f\in V^*$ existe $u\in V$ tal que $f=\varphi_u$.
+\end{teorema}
+\begin{proof}
+Seja $f\in V^*$. Escolhemos uma base ortonormal $B=(e_1,\dots,e_n)$ em $V$ e seja $\alpha_i=f(e_i)\in K$ para $i=1,\dots,n$. Consideremos $u=\overline{\alpha_1}e_1+\dots+\overline{\alpha_n}e_n.$ Então para $k=1,\dots,n$ temos:
+\[
+\begin{array}{rcl}
+\varphi_u(e_k)=\langle e_k,u\rangle&=&\langle e_k,\overline{\alpha_1}e_1+\dots+\overline{\alpha_n}e_n\rangle\\
+&=&\alpha_k\langle e_k,e_k\rangle=\alpha_k=f(e_k),
+\end{array}
+\]
+ou seja, $\varphi_u(e_k)=f(e_k)$; logo $\varphi_u=f$.
+\end{proof}
+
+\begin{observacao}
+O teorema de Riesz não é válido para espaços com produto interno de dimensão finita. De fato, se $V=\mathcal{C}[a,b]$, então seja $x_0\in[a,b]$ e seja $\varphi\in V^*$ dada por:
+\[
+\varphi(f)=f(x_0).
+\]
+\end{observacao}
 
 \printindex
 
